Fixed navigation visibility issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -216,6 +216,7 @@ header {
     width: 100%;
     background-color: #212450;
     padding-bottom: 10px;
+    z-index: 1;
   }
 }
 
